<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.scriptbasic</groupId>
    <artifactId>jscriptbasic</artifactId>
    <version>1.0.6-SNAPSHOT</version>
    <packaging>jar</packaging>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <name>ScriptBasic for Java</name>
    <url>http://www.scriptbasic.com</url>
    <organization>
        <name>Verhas and Verhas Software Craftsmen</name>
        <url>http://www.verhas.com</url>
    </organization>
    <description>ScriptBasic for Java is an implementation of ScriptBasic for the Java technology, language and
        users.
        For more information have a look at the site documentation, and use the menu items on the left side.

    </description>
    <issueManagement>
        <url>https://github.com/verhas/jScriptBasic/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <licenses>
        <license>
            <name>GPL License</name>
            <url>http://opensource.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:verhas/jScriptBasic.git</connection>
        <url>https://github.com/verhas/jScriptBasic</url>
        <developerConnection>scm:git:git@github.com:verhas/jScriptBasic.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <email>peter@verhas.com</email>
            <name>Peter Verhas</name>
            <url>https://github.com/verhas</url>
            <id>verhas</id>
        </developer>
    </developers>
    <properties>
        <powermock.version>1.4.12</powermock.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Main-Class>com.scriptbasic.main.CommandLine</Main-Class>
                        </manifestEntries>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <!--
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <site>
            <id>gitHub</id>
            <name>gitHub</name>
            <url>git:git@github.com/verhas/jScriptBasic</url>
        </site>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
